# yt

./: .gitignore  package-lock.json  package.json  run.sh
.github/: copilot-instructions.md
backend/: Cargo.toml
backend/src/: crawler.rs  database.rs  main.rs
backend/test_files/: get_video_common.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  error_page.tsx  index.css  main.tsx  root.tsx  yt.css  yt.tsx
frontend/src/pages/: index.tsx  mockdata.json  table.tsx
frontend/src/routes/: root.tsx
frontend/src/styles/: globals.css
frontend_old/: package-lock.json  package.json
frontend_old/src/pages/: index.tsx  table.tsx
frontend_old/src/styles/: globals.css
src/: App.css  App.tsx  mockdata.json
src/pages/: index.tsx  mockdata.json
