[package]
name = "yt_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
chrono = {version = "0.4.38", features = ["serde"]}
curl = "0.4.46"
futures = "0.3.30"
regex = "1.10.5"
serde_json = "1.0.118"
sqlx = {version = "0.7.4", features = ["runtime-async-std", "postgres", "chrono", "time"]}
